<resources>
    <string name="app_name">Jualin</string>
    <string name="email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="informasi_masuk">Masukkan kredensial untuk masuk ke aplikasi</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="format_email">Gunakan Format Email</string>
    <string name="konfirmasi_password">konfirmasi password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sudah_punya_akun">sudah punya akun</string>
    <string name="nama_jasa">nama jasa</string>
    <string name="icon_lokasi">icon lokasi</string>
    <string name="alamat">Alamat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="lihat_toko">Lihat Toko</string>
    <string name="home">Home</string>
    <string name="terdekat">Terdekat</string>
    <string name="cari_gambar">Cari Gambar</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="produk">Produk</string>
    <string name="jasa">Jasa</string>
    <string name="scan_gambar">Scan gambar</string>
    <string name="ambil_dari_galeri">Ambil dari Galeri</string>
    <string name="gambar_produk">gambar sebuah produk</string>
    <string name="logo_jualin">logo jualin</string>
    <string name="discount_up_to">DISCOUNT UP TO %d%%</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="artikel">Artikel</string>
    <string name="rekomendasi_terbaik">Rekomendasi Terbaik</string>
    <string name="promo_untukmu">Promo Untukmu</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="profile">Profile</string>
    <string name="keluar">Keluar</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="telp">Telp</string>
    <string name="layanan">Layanan</string>
    <string name="hubungi_sekarang">Hubungi Sekarang</string>
    <string name="umkm_di_sekitar_anda">UMKM di sekitar anda</string>
    <string name="edit_data_umkm">Edit Data UMKM</string>
    <string name="item_tidak_ditemukan">Item tidak ditemukan</string>
    <string name="buka_galeri">Buka Galeri</string>
    <string name="tambah_umkm">Tambah UMKM</string>
    <string name="location_placeholder">%s, %s</string>
    <string name="buat_sekarang">Buat Sekarang!</string>
    <string name="simpan">Simpan</string>
    <string name="memuat">Memuat…</string>
    <string name="nama_usaha">Nama Usaha</string>
    <string name="kategori">Kategori</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="edit_etalase">Edit Etalase</string>
    <string name="hapus">Hapus</string>
    <string name="pilih_kategori">Pilih Kategori</string>
</resources>