<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.fragments.RegisterFragment">


    <TextView
        android:layout_marginTop="180dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_nama"
        style="@style/Theme.CustomTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/nama_lengkap"
        android:autofillHints="no" />


    <com.jualin.apps.ui.views.EmailEditText
        android:id="@+id/edit_text_email"
        style="@style/Theme.CustomTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <com.jualin.apps.ui.views.PasswordEditText
        android:id="@+id/edit_text_password"
        style="@style/Theme.CustomTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:inputType="textVisiblePassword"
        android:hint="@string/password" />

    <com.jualin.apps.ui.views.PasswordEditText
        android:id="@+id/edit_text_password_confirm"
        style="@style/Theme.CustomTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:inputType="textVisiblePassword"
        android:hint="@string/konfirmasi_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="80dp"
        android:paddingVertical="7dp"
        android:text="@string/masuk"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/sudah_punya_akun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/masuk" />
    </LinearLayout>


</LinearLayout>