<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Edit Profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/product_logo"
            app:civ_border_color="@color/softBlue"
            app:civ_border_width="12dp" />

        <Button
            android:id="@+id/btn_edit_photo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Add Photo"
            />


        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/edit_text_nama"
            style="@style/Theme.CustomTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/nama_lengkap"
            android:autofillHints="no" />


        <com.jualin.apps.ui.views.EmailEditText
            android:id="@+id/edit_text_email"
            style="@style/Theme.CustomTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edit_text_alamat"
            style="@style/Theme.CustomTextField"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="text"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/alamat"
            android:autofillHints="no" />

        <com.jualin.apps.ui.views.PasswordEditText
            android:id="@+id/edit_text_password"
            style="@style/Theme.CustomTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:inputType="textVisiblePassword"
            android:hint="@string/password" />

        <com.jualin.apps.ui.views.PasswordEditText
            android:id="@+id/edit_text_password_confirm"
            style="@style/Theme.CustomTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="16dp"
            android:inputType="textVisiblePassword"
            android:hint="@string/konfirmasi_password" />


        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            android:minHeight="0dp"
            android:text="Save Changes"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>