<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/search_field_background"
            android:iconifiedByDefault="false"
            android:queryBackground="@color/transparent"
            android:queryHint="Cari barang atau jasa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/artikel"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="end"
                android:text="@string/lihat_semua"
                android:textColor="#6046FF"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/carousel_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/rekomendasi_terbaik"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            tools:listitem="@layout/item_recommended_business" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/promo_untukmu"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <include
                android:id="@+id/include_1"
                layout="@layout/item_discount"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1" />

            <include
                android:id="@+id/include_2"
                layout="@layout/item_discount"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <include
                android:id="@+id/include_3"
                layout="@layout/item_discount"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1" />

            <include
                android:id="@+id/include_4"
                layout="@layout/item_discount"
                android:layout_width="0dp"
                android:layout_height="135dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
