<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.BusinessDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="wrap_content"
                android:layout_height="255dp"
                android:background="#82799D" />

            <ImageView
                android:id="@+id/ivBusinessImage"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:alpha="0.3"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tvBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:fontFamily="@font/baskervville_regular"
                android:gravity="center"
                android:textColor="@color/pureWhite"
                android:textSize="32sp"
                tools:text="Kedai Kopi Jualin" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="16dp"
                android:background="@drawable/ic_arrow_back"
                android:backgroundTint="@color/pureWhite"
                android:scaleType="centerCrop" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:background="@drawable/business_detail_round_sheet"
            android:orientation="vertical"
            android:paddingHorizontal="26dp">


            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:drawableEndCompat="@drawable/ic_place_24dp"
                tools:text="Jalan Ir. Soekarno No. 44, Geneng, Ngawi, Jawa Timur." />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:maxLength="650"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/produk"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_product_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_service_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/jasa"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_service_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@drawable/card_background"
                android:minHeight="0dp"
                android:text="@string/hubungi_sekarang" />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>